<resources>
    <string name="app_name">Movie Catalog</string>

    <string name="navigation_drawer_open">Apri Drawer</string>
    <string name="navigation_drawer_close">Chiudi Drawer</string>


    <string name="more">More</string>

    <!--Item Drawer_Menu -->
    <string name="home">Home</string>
    <string name="search">Cerca</string>
    <string name="categories">Categorie</string>

    <!--Tabs Item-->
    <string name="tab_item_movies">Film</string>
    <string name="tab_item_series">Serie TV</string>
    <string name="tab_item_games">Giochi</string>


    <!-- List Chips -->
    <string name="All">Tutti</string>
    <string name="Action">Azione</string>
    <string name="Adventure">Avventura</string>
    <string name="Drama">Drama</string>
    <string name="Animation">Animazione</string>
    <string name="Fantasy">Fantasy</string>
    <string name="Comedy">Commedia</string>
    <string name="Short">Short</string>
    <string name="Family">Famiglia</string>
    <string name="Crime">Crimine</string>
    <string name="Documentary">Documentario</string>
    <string name="Mystery">Mistero</string>
    <string name="War">Guerra</string>
    <string name="Romance">Romantico</string>
    <string name="History">Storico</string>
    <string name="Thriller">Thriller</string>


    <!--Errors-->
    <string name="no_connection">Nessuna connessione ad internet</string>


    <!--Utils-->
    <string name="empty_list">Ops! C\'è stato un problema, riprova più tardi</string>
    <string name="empty_string" translatable="false"></string>


    <string name="hello_blank_fragment">Blank Fragment</string>
    <!--Ordinamento Film Fragment Category-->
    <string name="a_z">A→Z</string>
    <string name="z_a">Z→A</string>

    <!--Languages-->
    <string name="italian">Italiano</string>
    <string name="english">Inglese</string>


    <string name="settings">Impostazioni</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>